--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - redis
       - celery
     env_file:
-      - config/conf.env
+      - configs/conf.env
 
   db:
     restart: always
@@ -20,7 +20,7 @@ services:
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     env_file:
-      - config/db.env
+      - configs/db.env
     ports:
       - "5432:5432"
 
@@ -45,6 +45,6 @@ services:
     container_name: celery
     environment:
       - CELERY_BROKER_URL=redis
-    command: celery -A innowiseProject worker -l info
+    command: celery -A innowise_task worker -l info
     depends_on:
       - redis
